--- a/AltDS/AltDS.csproj
+++ b/AltDS/AltDS.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="Trinet.Core.IO.Ntfs, Version=3.5.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\AltDSDll\AltDSDll\bin\Debug\Trinet.Core.IO.Ntfs.dll</HintPath>
+      <HintPath>.\Trinet.Core.IO.Ntfs.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
